jasper/force-app/main/default/objects/Account/fields/Center_Code__c.field-meta.xml
<CustomField>
    <fullName>Center_Code__c</fullName>
    <label>Dealer Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>