jasper/force-app/main/default/objects/Account/fields/CIN__c.field-meta.xml
<CustomField>
    <fullName>CIN__c</fullName>
    <label>CIN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>