jasper/force-app/main/default/objects/Account/fields/Company_GSTIN_name__c.field-meta.xml
<CustomField>
    <fullName>Company_GSTIN_name__c</fullName>
    <label>Company GSTIN Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>