jasper/force-app/main/default/objects/Account/fields/Dealer_Ref_No_For_RSA__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Ref_No_For_RSA__c</fullName>
    <label>Dealer Ref No For RSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>