jasper/force-app/main/default/objects/Account/fields/DealerCode__c.field-meta.xml
<CustomField>
    <fullName>DealerCode__c</fullName>
    <formula>Owner.Dealer_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DealerCode</label>
    <type>Text</type>
</CustomField>