jasper/force-app/main/default/objects/Account/fields/Enquiry_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Phone_number__c</fullName>
    <label>Enquiry Phone number</label>
    <type>Phone</type>
</CustomField>