jasper/force-app/main/default/objects/Account/fields/GST_City__c.field-meta.xml
<CustomField>
    <fullName>GST_City__c</fullName>
    <label>GST City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>