jasper/force-app/main/default/objects/Account/fields/GST_Street__c.field-meta.xml
<CustomField>
    <fullName>GST_Street__c</fullName>
    <label>GST Street</label>
    <type>TextArea</type>
</CustomField>