jasper/force-app/main/default/objects/Account/fields/GST_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>GST_Zip_Postal_Code__c</fullName>
    <label>GST Zip/ Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>