jasper/force-app/main/default/objects/Account/fields/GSTIN_Number__c.field-meta.xml
<CustomField>
    <fullName>GSTIN_Number__c</fullName>
    <label>GSTIN Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>