jasper/force-app/main/default/objects/Account/fields/Invoice_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sequence__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Invoice Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>