jasper/force-app/main/default/objects/Account/fields/Is_Billing_same_as_shipping__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_same_as_shipping__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Address same as Shipping Address</label>
    <type>Checkbox</type>
</CustomField>