jasper/force-app/main/default/objects/Account/fields/Manager_Thresold_Amount__c.field-meta.xml
<CustomField>
    <fullName>Manager_Thresold_Amount__c</fullName>
    <label>Manager Thresold Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>