jasper/force-app/main/default/objects/Account/fields/New_Account__c.field-meta.xml
<CustomField>
    <fullName>New_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Account</label>
    <type>Checkbox</type>
</CustomField>