jasper/force-app/main/default/objects/Account/fields/Repeat_Lead_Within_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Repeat_Lead_Within_90_Days__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Repeat Lead Within 90 Days</label>
    <type>Checkbox</type>
</CustomField>