jasper/force-app/main/default/objects/Account/fields/RR_Customer_Care_Email__c.field-meta.xml
<CustomField>
    <fullName>RR_Customer_Care_Email__c</fullName>
    <label>Customer Care Email</label>
    <type>Email</type>
</CustomField>