jasper/force-app/main/default/objects/Account/fields/RR_Customer_HelpLine_Number__c.field-meta.xml
<CustomField>
    <fullName>RR_Customer_HelpLine_Number__c</fullName>
    <label>Customer HelpLine Number</label>
    <type>Phone</type>
</CustomField>