jasper/force-app/main/default/objects/Account/fields/RSA_Seller_Id__c.field-meta.xml
<CustomField>
    <fullName>RSA_Seller_Id__c</fullName>
    <label>RSA Seller Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>