jasper/force-app/main/default/objects/Account/fields/Secondary_Phone_number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Phone_number__c</fullName>
    <label>Secondary Phone Number</label>
    <type>Phone</type>
</CustomField>