jasper/force-app/main/default/objects/Account/fields/Store_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager_Email__c</fullName>
    <label>Store Manager Email</label>
    <type>Email</type>
</CustomField>