jasper/force-app/main/default/objects/Account/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <label>Store Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>