jasper/force-app/main/default/objects/Account/fields/Store_Type__c.field-meta.xml
<CustomField>
    <fullName>Store_Type__c</fullName>
    <label>Store Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>COCO</fullName>
            </value>
            <value>
                <fullName>DODO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>