jasper/force-app/main/default/objects/Account/validationRules/Dealer_Account_modification_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Dealer_Account_modification_restriction</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISNEW()),
    NOT(ISPICKVAL(Type, &quot;Customer&quot;)),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You are not allowed to modify non - customer Accounts</errorMessage>
</ValidationRule>