jasper/force-app/main/default/objects/Account/validationRules/Dealer_code_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Dealer_code_mandatory</fullName>
    <active>false</active>
    <errorConditionFormula>ISBLANK( Center_Code__c ) &amp;&amp;
(
  ISPICKVAL( Type , &quot;Dealer&quot;) ||
  ISPICKVAL( Type , &quot;Service Center&quot;)
)</errorConditionFormula>
    <errorDisplayField>Center_Code__c</errorDisplayField>
    <errorMessage>The Dealer code is mandatory</errorMessage>
</ValidationRule>