jasper/force-app/main/default/objects/Account/validationRules/Edit_access_of_Dealer_accounts.validationRule-meta.xml
<ValidationRule>
    <fullName>Edit_access_of_Dealer_accounts</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED( Type ),
    NOT(ISPICKVAL(Type, &quot;Customer&quot;)),
    $Profile.Name &lt;&gt; &quot;System Administrator&quot;
)</errorConditionFormula>
    <errorMessage>You Don&apos;t have the access to change the details in this account</errorMessage>
</ValidationRule>