jasper/force-app/main/default/objects/Account/validationRules/Mandate_GST_Address.validationRule-meta.xml
<ValidationRule>
    <fullName>Mandate_GST_Address</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Store_Type__c , &quot;DODO&quot;),
    OR(
        ISBLANK(GST_City__c),
        ISBLANK(TEXT(GST_State__c)),
        ISBLANK(GST_Street__c),
        ISBLANK(GST_Zip_Postal_Code__c)
    )
)</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>GST Address is required for DODO Store Type.</errorMessage>
</ValidationRule>