jasper/force-app/main/default/objects/Account/validationRules/Phone_number_change_restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_number_change_restriction</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISCHANGED(Phone),
    NOT(
        OR(
            $Profile.Name = &apos;Support team&apos;,
            $Profile.Name = &apos;System Administrator&apos;,
            $Profile.Name = &apos;Service Head&apos;
        )
    )
)</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>You cannot change the primary phone number, please add new number in Secondory phone number</errorMessage>
</ValidationRule>