jasper/force-app/main/default/objects/Account/validationRules/Phone_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_validation</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(OR(REGEX(Phone, &quot;^[0-9]{10}&quot;)))</errorConditionFormula>
    <errorDisplayField>Phone</errorDisplayField>
    <errorMessage>Enter 10 Digit Phone Number</errorMessage>
</ValidationRule>