jasper/force-app/main/default/objects/Account/validationRules/STORE_TYPE.validationRule-meta.xml
<ValidationRule>
    <fullName>STORE_TYPE</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
   NOT(OR( 
      ISPICKVAL(Type, &quot;Dealer&quot;), 
      ISPICKVAL(Type, &quot;Service Center&quot;) 
   )), 
   NOT(ISPICKVAL(Store_Type__c, &quot;&quot;)) 
)</errorConditionFormula>
    <errorDisplayField>Store_Type__c</errorDisplayField>
    <errorMessage>Please mention store type</errorMessage>
</ValidationRule>