jasper/force-app/main/default/objects/Account/listViews/Dealer_Account.listView-meta.xml
<ListView>
    <fullName>Dealer_Account</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>DealerCode__c</columns>
    <columns>Center_Code__c</columns>
    <columns>Email__c</columns>
    <columns>Store_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Dealer,COCO Store,Service Center</value>
    </filters>
    <label>Dealer Account</label>
</ListView>