jasper/force-app/main/default/objects/Account/listViews/JP_NAGAR.listView-meta.xml
<ListView>
    <fullName>JP_NAGAR</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>291001</value>
    </filters>
    <label>JP NAGAR</label>
</ListView>