jasper/force-app/main/default/objects/Account/listViews/Service_Center.listView-meta.xml
<ListView>
    <fullName>Service_Center</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Email__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>Company_GSTIN_name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Service Center</value>
    </filters>
    <filters>
        <field>Company_GSTIN_name__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Service Center</label>
</ListView>